[package]
name = "ouverture-cli"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bleuez <michael.bleuez2@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A next-generation music player and manager library CLI based ouverture-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ouverture-core = { path = "../ouverture-core"}
tokio = { version = "1.17.0", features = ["full"] }
color-eyre = "0.5"
structopt = "0.3"

async-stream = "0.3.3"
futures-core ="*"
futures-util ="*"

serde_json = "1.0"
reqwest = {version = "0.11.23", features = ["json"]}
