[package]
name = "ouverture-core"
description = "A next-generation music player and manager library"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bleuez <michael.bleuez2@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/michaelb/ouverture"
repository = "https://github.com/michaelb/ouverture"
readme = "README.md"
categories = ["mutlimedia::audio"]

[[bin]]
name = "ouverture-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pg-embed = "0.6.1"
tokio = { version = "1.17.0", features = ["full"] }
async-stream = "0.3.3"

platform-dirs = "0.3.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24.0"
strum_macros = "0.24.0"
serial_test = "0.6"
color-eyre = "0.6"
toml = "0.5.8"
enum_dispatch = "0.3.7"
structopt = "0.3"
async-walkdir = "0.2.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"

signal-hook = { version = "0.3", features = ["iterator"]}
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"]}
futures = "~0.3"
futures-lite="1.12.0"
futures-core="0.3.21"

sea-orm = { version = "0.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }



audiotags = "0.2"
infer = "0.7"
