[package]
name = "ouverture-core"
description = "A next-generation music player and manager library"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bleuez <michael.bleuez2@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/michaelb/ouverture"
repository = "https://github.com/michaelb/ouverture"
readme = "README.md"
categories = ["multimedia::audio"]

[[bin]]
name = "ouverture-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
color-eyre = "0.6"
toml = "0.5.8"
structopt = "0.3"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"

pg-embed = "0.7.1"

tokio = { version = "1.17.0", features = ["full"] }

async-stream = "0.3.3"
platform-dirs = "0.3.0"
async-walkdir = "0.2.0"

bincode = "1.3.3"

strum = "0.24.0"
strum_macros = "0.24.0"


signal-hook = { version = "0.3", features = ["iterator"]}
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"]}

futures = "~0.3"
futures-lite="1.12.0"
futures-core="0.3.21"

sea-orm = { version = "0.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }

audiotags = "0.2"
infer = "0.7"
symphonia = { version = "0.5.2", features= ["all"]}

rc_event_queue = "0.4.2"


[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arrayvec = "0.7.1"
cpal = "0.13.3"
rb = "0.3.2"
rubato = "0.12.0"
