[package]
name = "ouverture-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michael Bleuez <michael.bleuez2@gmail.com>"]
description = "A next-generation music player and manager GUI based of ouverture-core"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ouverture-core = { path = "../ouverture-core"}
tokio = { version = "1.12.0", features = ["full"] }
iced = {version = "0.3", features = ["debug"]}
enum_dispatch = "0.3.7"
