[package]
name = "ouverture-ui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Michael Bleuez <michael.bleuez2@gmail.com>"]
description = "A next-generation music player and manager GUI based of ouverture-core"

homepage = "https://github.com/michaelb/ouverture"
repository = "https://github.com/michaelb/ouverture"
readme = "README.md"
categories = ["mutlimedia::audio"]

[[bin]]
name = "ouverture"
path = "src/main.rs"

[dependencies]
ouverture-core = { version = "0.1.0", path = "../ouverture-core"}
tokio = { version = "1.17.0", features = ["full"] }
iced = {version = "0.4", features = ["debug"]}
iced_futures = { version = "0.4.1", features = ["tokio"] }
iced_native = { version = "0.5.1" }
iced_graphics = { version = "0.3.1" }
iced_core = { version = "0.5.0" }
iced_wgpu = { version = "0.5.1" }
serde ="1.0"


enum_dispatch = "0.3.7"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
structopt = "0.3.26"

futures-core="0.3.21"
async-stream = "0.3.3"
futures-util="0.3.21"

copystr="0.0.5"

