[package]
name = "ouverture-ui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Michael Bleuez <michael.bleuez2@gmail.com>"]
description = "A next-generation music player and manager GUI based of ouverture-core"

homepage = "https://github.com/michaelb/ouverture"
repository = "https://github.com/michaelb/ouverture"
readme = "README.md"
categories = ["mutlimedia::audio"]

[[bin]]
name = "ouverture"
path = "src/main.rs"

[dependencies]
ouverture-core = { version = "0.1.0", path = "../ouverture-core"}
tokio = { version = "1.17.0", features = ["full"] }
iced = {version = "0.9.0", features = ["debug"]}
iced_futures = { version = "0.6.0", features = ["tokio"] }
iced_native = { version = "0.10.0" }
# iced_graphics = { version = "0.7.0" }
# iced_core = { version = "0.8.0" }
# iced_wgpu = { version = "0.9" }
serde ="1.0"


daemonize="0.5"
nix="0.18.0"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
structopt = "0.3.26"

futures-core="0.3.21"
async-stream = "0.3.3"
futures-util="0.3.21"

fixedstr = "0.2.9"

color-eyre = "0.6"
toml = "0.7.6"

strum = { version = "0.24", features = ["derive"] }
